Feat : 위시 삭제 API
