# src/routes/wish/wish.controller.ts
@@ -2,8 +2,7 @@ import {
   Route,
   Controller,
   Post,
-  Query,
-  Path,
+  Delete,
   SuccessResponse,
   Body,
   Response,
@@ -16,7 +15,7 @@ import {
   ErrorResponse
 } from '../../config/tsoaResponse.js';
 import { WishService } from './wish.service.js';
-import { CreateWishResDTO, CreateWishReqDTO } from './wish.dto.js';
+import { WishResDTO, DeleteWishResDTO, WishReqDTO } from './wish.dto.js';
 
 @Route('/wish')
 @Tags('Wish')
@@ -36,9 +35,23 @@ export class WishController extends Controller {
   @SuccessResponse(201, '위시 아이템 생성 완료')
   @Post('/')
   public async createWish(
-    @Body() body: CreateWishReqDTO
-  ): Promise<TsoaResponse<CreateWishResDTO>> {
+    @Body() body: WishReqDTO
+  ): Promise<TsoaResponse<WishResDTO>> {
     const result = await this.wishService.createWish(body);
-    return new ResponseHandler<CreateWishResDTO>(result);
+    return new ResponseHandler<WishResDTO>(result);
+  }
+
+  /**
+   * @summary 위시 아이템 삭제
+   * @param body 삭제할 위시 정보
+   * @returns 삭제된 위시 아이템 정보
+   */
+  @SuccessResponse(200, '위시 아이템 삭제 완료')
+  @Delete('/')
+  public async deleteWish(
+    @Body() body: WishReqDTO
+  ): Promise<TsoaResponse<DeleteWishResDTO>> {
+    const result = await this.wishService.deleteWish(body);
+    return new ResponseHandler<DeleteWishResDTO>(result);
   }
 }
