# src/routes/wish/wish.service.ts
@@ -1,17 +1,23 @@
-import { CreateWishReqDTO, CreateWishResDTO } from './wish.dto.js';
+import { WishReqDTO, WishResDTO, DeleteWishResDTO } from './wish.dto.js';
 import {
   UserReqForbiddenError,
   OwnerReqForbiddenError,
-  UnknownRoleError
+  UnknownRoleError,
+  WishNotFoundError
 } from './wish.error.js';
-import { createUserWish, createOwnerWish } from './wish.model.js';
+import {
+  createUserWish,
+  createOwnerWish,
+  deleteUserWish,
+  deleteOwnerWish
+} from './wish.model.js';
 
 type MockRole = 'USER' | 'OWNER';
 
 export class WishService {
   constructor() {}
 
-  async createWish(req: CreateWishReqDTO): Promise<CreateWishResDTO> {
+  async createWish(req: WishReqDTO): Promise<WishResDTO> {
     const mockUser = {
       id: '0f41af82-2259-4d42-8f1a-ca8771c8d473',
       role: 'USER' as MockRole
@@ -25,7 +31,7 @@ export class WishService {
 
       const created = await createUserWish(mockUser.id, req.type, req.itemId);
       const wishId = (created as { wish_id: string }).wish_id;
-      return { wishId, createdAt: new Date() } as CreateWishResDTO;
+      return { wishId, createdAt: new Date() } as WishResDTO;
     }
 
     if (mockUser.role === 'OWNER') {
@@ -35,7 +41,42 @@ export class WishService {
 
       const created = await createOwnerWish(mockUser.id, req.itemId);
       const wishId = (created as { wish_id: string }).wish_id;
-      return { wishId, createdAt: new Date() } as CreateWishResDTO;
+      return { wishId, createdAt: new Date() } as WishResDTO;
+    }
+
+    throw new UnknownRoleError();
+  }
+
+  async deleteWish(req: WishReqDTO): Promise<DeleteWishResDTO> {
+    const mockUser = {
+      id: '0f41af82-2259-4d42-8f1a-ca8771c8d473',
+      role: 'USER' as MockRole
+    };
+
+    if (mockUser.role === 'USER') {
+      if (req.type === 'REQUEST') {
+        throw new UserReqForbiddenError();
+      }
+
+      const deleted = await deleteUserWish(mockUser.id, req.type, req.itemId);
+      if (!deleted) throw new WishNotFoundError();
+      return {
+        wishId: deleted.wish_id,
+        deletedAt: new Date()
+      } as DeleteWishResDTO;
+    }
+
+    if (mockUser.role === 'OWNER') {
+      if (req.type !== 'REQUEST') {
+        throw new OwnerReqForbiddenError();
+      }
+
+      const deleted = await deleteOwnerWish(mockUser.id, req.itemId);
+      if (!deleted) throw new WishNotFoundError();
+      return {
+        wishId: deleted.wish_id,
+        deletedAt: new Date()
+      } as DeleteWishResDTO;
     }
 
     throw new UnknownRoleError();
